Finish Thesis. Finish V2 really now

--- a/tex/sections/4-application.tex
+++ b/tex/sections/4-application.tex
@@ -231,5 +231,5 @@ In fact, when considering the distance distributions for total means (black), we
 This is in contrast to the per-speaker means (coloured), where grouping by consonant seems to decrease the variability at least slightly.
 It seems that without accounting for the individual speaker, the consonant only explains very little in terms of variability of the tongue shapes.
 This indicates that there is no strong common effect of the spoken consonant on tongue shape, but rather that this effect depends on each speaker individually.
-Finally, when considering the grouping by single words (central eight plots), we can note that the variability measured over the per-speaker means is consistently smaller than the variability of the total means, indicating that tongue shape is very consistent on a per-speaker basis.
+Finally, when considering the grouping by single words (central eight plots), we can note that the variability measured over the per-speaker means is always smaller than the variability of the total means, indicating that tongue shape is very consistent on a per-speaker basis.
 
